# Face-Tracking-Projection-Mapping

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DirectShow.props  ITWDebugFaceTrack  ITWFaceTracking.sln  ITWFaceTracking.vcxproj  ITWFaceTracking.vcxproj.filters  LICENSE  Makefile  OpenCV.props  README.md  app.py  cmake_install.cmake  main.cpp  requirements.txt
assets/: model_data.py
inc/: 3d_obj.py  byn_generate_mesh.py  common.h  facetrack.h  mesh_display.py  opencv_util.h  panda3d_geometry_test.py  panda3d_model_generation.py  test.h  video_capture.py  video_capture_mesh.py  virtual_webcamera.py  virtualcamera.h
inc/blender/: byn_generate_mesh.py  byn_generate_mesh_live.py  byn_mesh_display.py  test_move_mesh.py
inc/panda/: panad3d_occluder_culling.py  panda3d_back_geo.py  panda3d_basic_test.py  panda3d_geometry_example.py  panda3d_geometry_live.py  panda3d_geometry_test.py  panda3d_lighting_example.py  panda3d_lightning.py  panda3d_model_generation.py
inc/vcam/: Filters.h
inc/video/: vide_capture_pygame.py  video_capture.py  video_capture_mesh.py
results/: sync.ply
src/: facetrack.cpp  main.cpp  opencv_util.cpp  virtaulcamera.cpp
src/tests/: opencv_facetrack.cpp  opencv_facetrack_tutorial.cpp  opencv_inc.cpp
